k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nacos-prometheus-api-deploy
  labels:
    app: nacos-prometheus-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nacos-prometheus-api
  template:
    metadata:
      labels:
        app: nacos-prometheus-api
    spec:
      containers:
        - name: nginx
          image: nginx:1.19.6-alpine
          ports:
            - containerPort: 8888
          lifecycle:
            postStart:
              exec:
                command:
                  - sh
                  - '-c'
                  - |
                    echo "server {
                      resolver `grep ^nameserver /etc/resolv.conf|grep -oE '\d+\.\d+\.\d+\.\d+' || echo 8.8.8.8`;
                      listen 8888;
                      location / {
                        proxy_pass \$scheme://\$http_host\$request_uri;
                        proxy_set_header HOST \$host;
                        proxy_buffers 256 4k;
                        proxy_max_temp_file_size 0k;
                        proxy_connect_timeout 30;
                        proxy_send_timeout 60;
                        proxy_read_timeout 60;
                        proxy_next_upstream error timeout invalid_header http_502;
                      }
                    }" > /etc/nginx/conf.d/default.conf;
                    nginx -s reload;
        - name: api
          image: nacos-prometheus-api:latest
          ports:
            - containerPort: 8080
