k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nacos-prometheus-api-svc
spec:
  type: NodePort
  selector:
    app: nacos-prometheus-api
  ports:
    # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    # nginx 正向代理, 用于K8s内网穿透
    - name: port-proxy
      port: 8888
      nodePort: 32088
    # Nacos 服务发现Consul API
    - name: port-api
      port: 8080
      nodePort: 32080
