k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nacos-prometheus-api-ingress
spec:
  rules:
    - host: nacos-api.host
      http:
        paths:
        - path: /
          backend:
            serviceName: nacos-prometheus-api-svc
            servicePort: 8080
